<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">


            <TextView
            android:id="@+id/textViewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_margin="12dp"
            android:text="@string/setInfo"
            android:textSize="20sp"
            android:background="@color/third"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="305dp" />


            <EditText
                android:id="@+id/editTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="425dp" />


            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/userName"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="425dp" />


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="425dp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/phone"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="425dp" />


            <EditText
                android:id="@+id/editTextBornDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/bornDate"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="425dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:backgroundTint="@color/first"
                android:textAllCaps="false"
                app:cornerRadius="100dp"
                tools:layout_editor_absoluteX="165dp"
                tools:layout_editor_absoluteY="431dp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>

